Landi to Lando replacement

--- a/_posts/2013-4-7-5-46600.md
+++ b/_posts/2013-4-7-5-46600.md
@@ -76,7 +76,7 @@ The man retrieved a carved glass from the bedside table, already filled with red
 
 Marina drank. "Where am I?" she asked. "Are you not a priest?"
 
-"No, I am not a priest. I merely disguised myself as one of those venerable fathers to gain entry to the quarantine camp." The man gave an elegant bow. "I am Vincenzo Landi de Vannucci, Count of Vannucci, of Sardinia."
+"No, I am not a priest. I merely disguised myself as one of those venerable fathers to gain entry to the quarantine camp." The man gave an elegant bow. "I am Vincenzo Lando de Vannucci, Count of Vannucci, of Sardinia."
 
 "What is this place?" Marina asked, looking around the room.
 
@@ -88,7 +88,7 @@ Marina drank. "Where am I?" she asked. "Are you not a priest?"
 
 "Are they Chinese pirates?"
 
-"No, they are not pirates," Landi said. "They are excellent merchants and industrialists."
+"No, they are not pirates," Lando said. "They are excellent merchants and industrialists."
 
 "Why are you here? What do you want with me?" A sudden alarm seized Marina. She had long heard that not all Christians were kind to their own. The Barbary pirates counted many Christians among their ranks, and they showed no mercy to Christian ships.
 
@@ -108,22 +108,22 @@ He seemed to sense her unease. "You need not be afraid. I had no interest in you
 
 The maid laid the clothes on the bed. Marina recognized them as her own, from her luggage.
 
-"I bought back your luggage," Landi explained, seeing her confusion. "Unfortunately, I was unable to retrieve your silver and jewelry—they refused."
+"I bought back your luggage," Lando explained, seeing her confusion. "Unfortunately, I was unable to retrieve your silver and jewelry—they refused."
 
 "Thank you, Your Excellency," Marina said softly.
 
 "Change your clothes first. I will return shortly."
 
-With the maid's help, Marina changed. To be back in her own clothes—though cumbersome and constricting—was a profound comfort. From what this Signor Landi had said, there was now real hope of escaping her terrible predicament.
+With the maid's help, Marina changed. To be back in her own clothes—though cumbersome and constricting—was a profound comfort. From what this Signor Lando had said, there was now real hope of escaping her terrible predicament.
 
 Just then, Miss Mendoza arrived. After whispering a quiet blessing for her newfound freedom, Marina, overwhelmed with gratitude, fell into her arms, sobbing uncontrollably. If not for Mendoza's help, she would have fallen into the hands of these Australian heathens, just like the other poor girls.
 
-"You mustn't cry," Mendoza said. "You must thank Signor Landi and Signor Trini. Signor Landi spent nearly thirty thousand Gilt Certificates for you—at least several thousand pesos. Without his generosity, I don't know how I could have saved you."
+"You mustn't cry," Mendoza said. "You must thank Signor Lando and Signor Trini. Signor Lando spent nearly thirty thousand Gilt Certificates for you—at least several thousand pesos. Without his generosity, I don't know how I could have saved you."
 
 She recounted how she had desperately sought Landi's help. He had been reluctant at first, not wanting to antagonize his Australian business partners. They had agreed to have Trini bid on her behalf, never imagining that someone would compete so fiercely, driving the price far beyond what he had prepared.
 
-"...To raise enough money, Signor Trini was forced to sign a ruinous loan agreement," Mendoza sighed. "And even that was not enough! I had to run back and beg Signor Landi for help."
+"...To raise enough money, Signor Trini was forced to sign a ruinous loan agreement," Mendoza sighed. "And even that was not enough! I had to run back and beg Signor Lando for help."
 
 "I will never forget your great kindness," Marina said, her heart overflowing with gratitude, especially for Landi. She knew that without his generosity, she would now be in the hands of that dark, brutish man, suffering unspeakable abuse. "Whatever the cost, I will have my fiancé and my father repay you double."
 
-Landi smiled, making a magnanimous gesture. "You should repay poor Signor Trini first. His loan will bankrupt him within two months. The poor artist!"
+Lando smiled, making a magnanimous gesture. "You should repay poor Signor Trini first. His loan will bankrupt him within two months. The poor artist!"
