--- a/_posts/2013-4-8-5-46700.md
+++ b/_posts/2013-4-8-5-46700.md
@@ -10,11 +10,11 @@ tag: [normal]
 
 "Of course," Marina said breathlessly. "I want to go to Manila immediately! But I have no money, and no idea how to get there..."
 
-"Let Signor Landi take you," Mendoza said with a sigh. "Because he purchased you, he can no longer stay here either."
+"Let Signor Lando take you," Mendoza said with a sigh. "Because he purchased you, he can no longer stay here either."
 
 A pang of guilt struck Marina. "Thank you," she whispered. "I am so grateful."
 
-"Think nothing of it. To preserve the honor of a Spanish noblewoman is my privilege," Landi said, stroking his mustache. "I have grown weary of this place anyway. A change of scenery will be welcome. We shall depart in a week's time. There is a Chinese merchant ship bound for Manila."
+"Think nothing of it. To preserve the honor of a Spanish noblewoman is my privilege," Lando said, stroking his mustache. "I have grown weary of this place anyway. A change of scenery will be welcome. We shall depart in a week's time. There is a Chinese merchant ship bound for Manila."
 
 "And what of my two maids?"
 
@@ -42,7 +42,7 @@ Landi's "temporary residence" was, in fact, a luxury suite in the Dongmen Market
 
 "She is, of course, still in the quarantine camp, under the administration of the General Office," Jiang Shan said, savoring the new soda flavor as if it were a fine wine. "Señora de Tolosa merely dresses to look like an old woman."
 
-"Miss Mendoza and Landi are truly talented actors," Li Yan said, full of admiration. "I knew Landi was capable, but I never expected Miss Mendoza to be so professional. Her performance was utterly convincing."
+"Miss Mendoza and Lando are truly talented actors," Li Yan said, full of admiration. "I knew Lando was capable, but I never expected Miss Mendoza to be so professional. Her performance was utterly convincing."
 
 "It's not a performance. It's a genuine expression of her feelings," Jiang Shan said with a faint smile. "When the false becomes true, the true also becomes false. Miss Mendoza is in that state now. Which is good. It makes her all the more believable."
 
