--- a/_posts/2009-12-2-2-04600.md
+++ b/_posts/2009-12-2-2-04600.md
@@ -58,7 +58,7 @@ The three captured local horses were identified by Yang Baogui as Dian horses, a
 
 "What? You've done it?" Yang Baogui asked [Wu Nanhai][y009] with a grin.
 
-"No, just saw the... educational videos."
+"No, just saw the educational videos."
 
 "Let's put mule breeding on hold for now. The horse breeding season doesn't start until March. Besides, these animals are high-strung. They've been through a lot. Let's let them rest, fatten up, and get used to their new environment first."
 
