--- a/_posts/2010-4-20-3-00200.md
+++ b/_posts/2010-4-20-3-00200.md
@@ -103,4 +103,4 @@ In his vision, in the future world, only the transmigrator group would have the 
 [y003]: /characters/y003 "Wang Luobin"
 [y004]: /characters/y004 "Zhan Wuya"
 [y005]: /characters/y005 "Ma Qianzhu"
-[y006]: /characters/y006 "Li Yiwo"
+[y006]: /characters/y006 "Li Yiwu"
