--- a/_posts/2011-4-22-3-36900.md
+++ b/_posts/2011-4-22-3-36900.md
@@ -83,5 +83,5 @@ The last problem is the 13mm bullet. Whether it is a metal bullet or a paper-cas
 "In my opinion, the current 13mm Minie rifle is already too large in caliber and has excessive power, but this is a fait accompli and cannot be changed for a while."
 
 [y004]: /characters/y004 "Zhan Wuya"
-[y006]: /characters/y006 "Li Yi'ao"
+[y006]: /characters/y006 "Li Yiwo"
 [y007]: /characters/y007 "Li Yuanyuan"
