--- a/_posts/2011-4-23-3-37000.md
+++ b/_posts/2011-4-23-3-37000.md
@@ -99,4 +99,4 @@ Hold the barrel with your left hand, push the grip into the center of the tiger'
 "You must grip it very hard, but it must feel comfortable!" Salina looked at the female students who were holding the guns with all their might. "Grip it until your hand trembles a little, then loosen it a little! The wrist must be tense."
 
 Salina checked each person's grip one by one. For those who held the gun loosely, she would unceremoniously help them grip it tightly. No one expected this red-haired woman to be so strong. Lu Cheng felt that her hand was about to be crushed between her iron palm and the gun grip, and she couldn't help but cry out.
-[y006]: /characters/y006 "Li Yi'ao"
+[y006]: /characters/y006 "Li Yiwo"
