--- a/_posts/2013-3-29-5-45700.md
+++ b/_posts/2013-3-29-5-45700.md
@@ -76,7 +76,7 @@ She suddenly understood. She was standing in a room paved with porcelain.
 
 At this thought, she almost fainted. *Could this be the island of pirates from the story of Alibaba?*
 
-"Please take a bath here," Miss Mendoza said. "If you want to relieve yourself, the door on the left leads to the... toilet." Mendoza hesitated, not using the more euphemistic modern term "restroom."
+"Please take a bath here," Miss Mendoza said. "If you want to relieve yourself, the door on the left leads to the toilet." Mendoza hesitated, not using the more euphemistic modern term "restroom."
 
 A bath? This was ridiculous. She was a noble and elegant lady. She washed her face and hands every day, and her feet at night. Even on the ship, where it was inconvenient to do laundry, she changed her underwear every half a month.
 
