--- a/_posts/2013-8-3-6-11200.md
+++ b/_posts/2013-8-3-6-11200.md
@@ -10,7 +10,7 @@ What amazed the visiting group the most was how the full-time Yuanlao at Fangcao
 
 "For people as wealthy as the short-haired ones to still teach with such tireless diligence is admirable. We are far from their match," Liu Dalin remarked to Wang Ci with emotion. Anyone would have to admire such a spirit of dedication to education.
 
-"It's just that what the... Australians teach is entirely divorced from the righteous path of the sages. As the saying goes, if the path is not righteous, the more one learns, the more reactionary one becomes!" Wang Ci said, showing off a phrase he had picked up from attending classes over the past few days.
+"It's just that what the Australians teach is entirely divorced from the righteous path of the sages. As the saying goes, if the path is not righteous, the more one learns, the more reactionary one becomes!" Wang Ci said, showing off a phrase he had picked up from attending classes over the past few days.
 
 Jinshi Liu stroked his beard, closed his eyes, and pondered for a moment before speaking. "What the Australians teach, though not the books of the sages, follows the *way* of the sages. An ancient Australian sage said, 'All roads lead to Chang'an.' We cannot cling to the old ways without adapting. This Lingao, this Hainan, the people live and work in peace and contentment—is this not a rare, well-governed age?"
 
