--- a/_posts/2014-1-9-6-27100.md
+++ b/_posts/2014-1-9-6-27100.md
@@ -64,7 +64,7 @@ This way, the degree of "political oppression, economic exploitation, and person
 
 "It would be great if everyone were satisfied with the welfare."
 
-"To get a foot and ask for a yard is human nature. It's impossible to satisfy everyone," Ma Jia took the opportunity to advise. "We're having all these troubles because the cake isn't big enough. Otherwise, if each of the five hundred Elders had a grand mansion and dozens or hundreds of life secretaries, who would have the... inclination to cause trouble?"
+"To get a foot and ask for a yard is human nature. It's impossible to satisfy everyone," Ma Jia took the opportunity to advise. "We're having all these troubles because the cake isn't big enough. Otherwise, if each of the five hundred Elders had a grand mansion and dozens or hundreds of life secretaries, who would have the inclination to cause trouble?"
 
 An Xi saw Ma Jia and [Xiao Zishan][y001] sitting closer and closer, their voices getting lower and lower. He quickly made an excuse to pack up the slides and left.
 
