--- a/_posts/2014-11-3-7-08600.md
+++ b/_posts/2014-11-3-7-08600.md
@@ -54,7 +54,7 @@ As for how long the red flag could fly, not just them, but the entire gentry and
 
 The listeners were dumbfounded, trying to imagine the spectacular scene of a few hundred men chasing ten thousand, and they couldn't help but take a sharp breath.
 
-"In that case, the claim that the... Australians are only skilled with firearms, isn't that utterly absurd?" Young Boss Li suddenly felt like a frog in a well.
+"In that case, the claim that the Australians are only skilled with firearms, isn't that utterly absurd?" Young Boss Li suddenly felt like a frog in a well.
 
 "Which bastard said that? Even if you pit the kūnzéi soldiers against the Eastern Captives and forbid them from using muskets and cannons, I'd still bet on the kūnzéi to win."
 
@@ -70,7 +70,7 @@ The paifia went on ahead, striking his gong. The waiter returned and told the pe
 
 "Troops passing? Why are troops passing again?" The teahouse was abuzz with discussion.
 
-"I saw the river full of the... Australians' steamships, big and small, heading up the West and North Rivers. And now more troops are passing through?"
+"I saw the river full of the Australians' steamships, big and small, heading up the West and North Rivers. And now more troops are passing through?"
 
 "Perhaps they intend to fight all the way to Nanxiong, close the gates of the Five Ridges, so the imperial army can't come down, and the Senate can close the door and be emperors."
 
