--- a/_posts/2014-3-1-6-32200.md
+++ b/_posts/2014-3-1-6-32200.md
@@ -24,7 +24,7 @@ But a police position in Lingao came with real "official status," a genuine publ
 
 Besides, even if she didn't want it, what other choice did she have in Lingao, the Australians' stronghold? Ke Yun's words about "Ziminglou needing people" were still ringing in her ears.
 
-"But I wanted to join your department, the... Xingren Si..." Li Yongxun sighed, looking at Ke Yun's black uniform.
+"But I wanted to join your department, Xingren Si..." Li Yongxun sighed, looking at Ke Yun's black uniform.
 
 Ke Yun smiled. "There's still plenty of time. Take it slow."
 
